--- a/doc/cs/kap02.tex
+++ b/doc/cs/kap02.tex
@@ -647,6 +647,89 @@ Ten v tomto případě obsahuje obecnou hlášku "An error occurred while proces
 
 \subsubsection*{Autorizace}
 
+V programu máme také server-side autorizaci. Ta slouží k ověření toho, jestli je uživatel oprávněný provést danou akci. Základní entitou pro autorizaci je kurz (entita Course). V aplikaci tedy vždy ověřujeme, jestli je aktuální uživatel administrátor (příp. člen) kurzu, ke kterému se vztahuje daná entita (např. CourseTest).
+
+K tomuto účelu používáme autorizační atributy, které se nachází ve složce Auth/Attributes. 
+Abstraktní třída CourseBasedAuthorizeFilter slouží jako rodičovská třída pro všechny atributy, založené na autorizaci pomocí kurzů.
+
+\begin{lstlisting}
+/// <summary>
+/// filter for authorization based on <see cref="Data.Models.Course"/> related entity
+/// </summary>
+public abstract class CourseBasedAuthorizeFilter : IAuthorizationFilter
+{
+	/// <summary>
+	/// type of the course related entity
+	/// </summary>
+	private readonly EntityType entityType;
+	
+	/// <summary>
+	/// name of the field in HTTP route that contains the id of the entity
+	/// </summary>
+	private readonly string entityIdFieldName;
+	
+	/// <summary>
+	/// factory for <see cref="Services.Interfaces.ICourseReferenceService"/> services
+	/// </summary>
+	private readonly ICourseReferenceServiceFactory courseReferenceServiceFactory;
+
+	/// <inheritdoc/>
+	public void OnAuthorization(AuthorizationFilterContext context)
+	{
+		if (context.HttpContext.User.Identity.IsAuthenticated)
+		{
+			string currentUserId = context.HttpContext.GetCurrentUserId();
+			string objectId = context.HttpContext.Request.RouteValues[entityIdFieldName].ToString();
+			
+			var service = courseReferenceServiceFactory.GetByEntityType(entityType);
+			string courseId = service.GetCourseIdOf(objectId);
+			
+			if (IsAuthorized(currentUserId, courseId, entityType, objectId))
+			{
+				// authorization passed -> proceed to controller
+				return;
+			}			
+		}
+		context.Result = new UnauthorizedResult();
+	}
+	
+	/// <summary>
+	/// check if the user is authorized to access the course related entity
+	/// </summary>
+	/// ...
+	protected abstract bool IsAuthorized(string currentUserId, string courseId, EntityType entityType, string entityId);
+	
+	...
+}
+\end{lstlisting}
+
+Vidíme, že tato třída obsahuje typ entity (proměnná entityType), pomocí které provádíme autorizaci. Dále také název proměnné v URL, která obsahuje identifikátor této entity. Metoda OnAuthorization se automaticky zavolá při autorizaci. V této metodě nejprve zkontrolujeme, že uživatel je přihlášený, poté získáme jeho ID (přes HttpContext) a ID dané entity. 
+
+Poté získáme identifikátor kurzu, ke kterému daná entita logicky patří. Zde využíváme toho, že všechny služby implementují rozhraní ICourseReferenceService. 
+Dále zjistíme, jestli má uživatel dostatečná práva. K tomuto účelu slouží abstraktní metoda IsAuthorized. Jedná se o využití návrhového vzoru Template method, kdy implementaci této metody necháme na třídách, které dědí z CourseBasedAuthorizeFilter. 
+Společné kroky autorizace nicméně implementujme v této (rodičovské) třídě.
+
+V aplikaci používáme tyto typy autorizační filtry:
+\begin{itemize}
+	\item CourseAdminAuthorizeFilter - ověřuje, jestli je aktuální uživatel administrátor kurzu, ke kterému patří daná entita. Používáme v akcích, které může provádět pouze admin daného kurzu (jako např. vytváření nebo opravení testu).
+	\item CourseAdminOrMemberAuthorizeFilter - ověřuje, zda je aktuální uživatel administrátor nebo člen kurzu, ke kterému patří daná entita. Tento filtr používáme např. v metodě pro získání všech souborů v daném kurzu.
+	\item CourseAdminOrOwnerAuthorizeFilter - podobně jako 1. filtr slouží k ověření toho, jestli je aktuální uživatel administrátor kurzu, k němuž patří daná entita. Zároveň ale akci povolíme provést, pokud je uživatel vlastníkem dané entity. To znamená, že příslušná entita (např. odevzdaný test - entita TestSubmission) se váže k danému uživateli. Toto ověření používáme například v metodě pro získání opraveného testu.
+\end{itemize}
+
+\begin{lstlisting}
+public class CourseAdminOrMemberAuthorizeFilter : CourseBasedAuthorizeFilter
+{
+	private readonly IPeopleService peopleService;
+	
+	/// <inheritdoc/>
+	protected override bool IsAuthorized(string currentUserId, string courseId, EntityType entityType, string objectId)
+	{
+		return peopleService.IsAdminOfCourse(currentUserId, courseId) || peopleService.IsMemberOfCourse(currentUserId, courseId);
+	}
+	...
+}
+\end{lstlisting}
+
 \begin{lstlisting}
 /// <summary>
 /// factory for <see cref="ICourseReferenceService"/>
